Clean up code base