@@ -2,7 +2,6 @@ package local.redcare.controller.dto;
 
 import local.redcare.domain.ScoredEntry;
 
-import java.util.Collections;
 import java.util.List;
 
 
@@ -15,12 +14,12 @@ public record SearchView(
 
     public static SearchView of(List<ScoredEntry> entries, int page, int limit) {
         int total = entries.size();
-
-        int startAt = Math.min(total - 1, (page - 1) * limit);
-        int endAt = Math.min(total - 1, page * limit);
+        int from = (page - 1) * limit;
+        int start = Math.min(from, total);
+        int end = Math.min(from + limit, total);
 
         return new SearchView(
-                startAt == endAt ? Collections.emptyList() : entries.subList(startAt, endAt),
+                start >= end ? List.of() : entries.subList(start, end),
                 total,
                 page,
                 limit
